# JobZo

./: .gitignore  README.md  ROADMAP.md  alembic.ini  pyproject.toml  requirements.txt
ai/: __init__.py  client.py  cover_letter.py  llm.py  models.py  normalizer.py  ranker.py  retriever.py  score_vector.py  scorer.py  skill_graph.py  validator.py
alembic/: env.py
ats/: __init__.py  _base.py  ashby.py  bamboohr.py  base.py  generic.py  greenhouse.py  lever.py  personio.py  smartrecruiters.py  teamtailor.py  workday.py
benchmark/: __init__.py  runner.py
browser/: assistant.py
cli/: main.py
config/: browser.yaml.example  llm.yaml  providers.yaml  resume.yaml  skill_graph.yaml
database/: connection.py  models.py
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  RESEARCH.md  USER_GUIDE.md
domain/: __init__.py  analytics.py  capital.py  execution.py  experiment.py  metrics.py  models.py  observation.py  outreach.py  outreach_provider.py  person.py  planner.py  providers.py  registry.py  simulation.py
mission/: __init__.py  engine.py  inbox.py
prompts/: cover_letter.txt  email_draft.txt  gmail_parse.txt  resume_select.txt  score.txt  skill_extract.txt
providers/: __init__.py  base.py  company_pages.py  hn_scraper.py  manual.py  rss.py  telegram.py
resumes/: __init__.py  backend_v3.json  feed.py  fit_report.py  frontend_v2.json  fullstack_v4.json  generator.py  java_v1.json  jd_analyzer.py  optimizer.py  prepare.py  registry.py  scorer.py  sde_v1.json  skill_roadmap.py
scripts/: generate_resumes.py
services/: app_log.py  collector.py  company_registry.py  (+7 more)
(+63 files in other folders)
